REFACTOR & ADD: match mode

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
         <span id="level" class="game__hud-item">Level: 1</span> |
         <span id="score" class="game__hud-item">Punkte: 0</span> |
         <span id="target" class="game__hud-item">Ziel: 300</span> |
-        <span id="moves" class="game__hud-item">Züge: 20</span>
+        <span id="moves" class="game__hud-item">Züge: 20</span> |
+        <span class="game__hud-item">
+            Tausch-Regel:
+            <select id="swap-mode" class="game__hud-select">
+                <option value="require-match" selected>Nur mit Match</option>
+                <option value="free-swap">Jeder Tausch</option>
+            </select>
+        </span>
     </div>
 
 </body>
