ADD: mobile view

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- important for mobile devices to get the scaling right! -->
     <title>Match-3 Browsergame mit Sounds</title>
     <link rel="stylesheet" href="css/styles.css" />
     <script type="module" src="dist/main.js"></script>
