--- a/index.html
+++ b/index.html
@@ -48,5 +48,15 @@
         </div>
     </div>
 
+    <div id="result-modal" class="game__modal">
+        <div class="game__modal-dialog" role="dialog" aria-labelledby="result-title" aria-describedby="result-text">
+            <div class="game__modal-content">
+                <h2 id="result-title" class="game__modal-title"></h2>
+                <p id="result-text" class="game__modal-text"></p>
+                <button id="result-button" class="game__modal-button" type="button">Weiter</button>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
