--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </span>
         <span class="game__menu-label">Menü</span>
     </button>
-    <h1 class="game__title">Match-3 Spiel</h1>
+    <h1 class="game__title">Explosive Candies</h1>
     <div id="game" class="game__board"></div>
     <div id="hud" class="game__hud">
         <div class="game__hud-row">
