Add structured level goals and difficulty tracking

--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
                 <div id="score-progress-fill" class="game__hud-progress-fill"></div>
             </div>
         </div>
+        <div class="game__hud-card game__hud-card--wide game__hud-card--goals">
+            <div class="game__hud-bar-header">
+                <span class="game__hud-label">Schwierigkeit</span>
+                <span id="difficulty" class="game__hud-value-strong">1</span>
+            </div>
+            <div class="game__goals">
+                <div class="game__hud-label">Ziele</div>
+                <ul id="goals-list" class="game__goals-list"></ul>
+            </div>
+        </div>
     </div>
 
     <div id="result-modal" class="game__modal">
