Revamp HUD layout for compact goals

--- a/index.html
+++ b/index.html
@@ -16,46 +16,42 @@
         </span>
         <span class="game__menu-label">Menü</span>
     </button>
-    <h1 class="game__title">Explosive Candies</h1>
-    <div id="game" class="game__board"></div>
     <div id="hud" class="game__hud">
         <div class="game__hud-row">
-            <div class="game__hud-card">
-                <div class="game__hud-label">Level</div>
+            <div class="game__hud-card game__hud-card--stat">
+                <div class="game__hud-label">Lvl</div>
                 <div id="level" class="game__hud-value">1</div>
             </div>
-            <div class="game__hud-card">
+            <div class="game__hud-card game__hud-card--stat">
                 <div class="game__hud-label">Züge</div>
-                <div class="game__hud-value">
-                    <span id="moves" class="game__hud-value-strong">20</span>
-                    <span class="game__hud-note">verbleibend</span>
-                </div>
+                <div id="moves" class="game__hud-value">20</div>
+            </div>
+            <div class="game__hud-card game__hud-card--stat">
+                <div class="game__hud-label">Ziel</div>
+                <div id="target" class="game__hud-value">300</div>
+            </div>
+            <div class="game__hud-card game__hud-card--stat">
+                <div class="game__hud-label">Stufe</div>
+                <div id="difficulty" class="game__hud-value">1</div>
             </div>
         </div>
-        <div class="game__hud-card game__hud-card--wide">
+        <div class="game__hud-card game__hud-card--progress">
             <div class="game__hud-bar-header">
                 <span class="game__hud-label">Punktestand</span>
                 <span class="game__hud-text">
                     <span id="score" class="game__hud-value-strong">0</span>
-                    <span class="game__hud-separator">/</span>
-                    <span id="target" class="game__hud-subtle">300</span>
                 </span>
             </div>
             <div id="score-progress" class="game__hud-progress" role="progressbar" aria-valuemin="0" aria-valuemax="300" aria-valuenow="0">
                 <div id="score-progress-fill" class="game__hud-progress-fill"></div>
             </div>
         </div>
-        <div class="game__hud-card game__hud-card--wide game__hud-card--goals">
-            <div class="game__hud-bar-header">
-                <span class="game__hud-label">Schwierigkeit</span>
-                <span id="difficulty" class="game__hud-value-strong">1</span>
-            </div>
-            <div class="game__goals">
-                <div class="game__hud-label">Ziele</div>
-                <ul id="goals-list" class="game__goals-list"></ul>
-            </div>
+        <div class="game__hud-card game__hud-card--goals">
+            <div class="game__hud-label">Ziele</div>
+            <ul id="goals-list" class="game__goals-list"></ul>
         </div>
     </div>
+    <div id="game" class="game__board"></div>
 
     <div id="result-modal" class="game__modal">
         <div class="game__modal-dialog" role="dialog" aria-labelledby="result-title" aria-describedby="result-text">
