Add combo status bar and HUD updates

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <span class="game__menu-line"></span>
         </span>
     </button>
+    <div class="game__status-bar" aria-live="polite">
+        <div id="status-icon" class="game__status-icon" aria-hidden="true">✨</div>
+        <div id="status-text" class="game__status-text">Bereit für Kombos!</div>
+    </div>
     <div id="hud" class="game__hud">
         <div class="game__hud-row">
             <div class="game__hud-card game__hud-card--stat">
