Add move evaluation overlay with spoken feedback

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     </div>
     <div id="game" class="game__board"></div>
 
+    <div id="move-evaluation" class="game__move-evaluation" role="status" aria-live="polite"></div>
+
     <div id="result-modal" class="game__modal">
         <div class="game__modal-dialog" role="dialog" aria-labelledby="result-title" aria-describedby="result-text">
             <div class="game__modal-content">
