--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     </button>
     <div id="hud" class="game__hud">
         <div class="game__hud-row">
-            <div class="game__hud-card game__hud-card--stat">
+            <div id="level-card" class="game__hud-card game__hud-card--stat game__hud-card--level">
                 <div class="game__hud-label">Lvl</div>
                 <div id="level" class="game__hud-value">1</div>
+                <div id="difficulty" class="game__hud-difficulty">Easy</div>
             </div>
 
             <div class="game__hud-card game__hud-card--stat">
