prettify hard cells

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="level-card" class="game__hud-card game__hud-card--stat game__hud-card--level">
                 <div class="game__hud-label">Lvl</div>
                 <div id="level" class="game__hud-value">1</div>
-                <div id="difficulty" class="game__hud-difficulty">Easy</div>
+                <div id="difficulty" class="game__hud-difficulty" style="display: none">Easy</div>
             </div>
 
             <div class="game__hud-card game__hud-card--stat">
