Update Google login to FedCM button

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     <div id="auth-progress" class="game__auth-progress">Fortschritt: Level 1</div>
                 </div>
                 <div class="game__auth-actions">
-                    <button id="google-login" class="game__main-menu-button game__main-menu-button--secondary" type="button">
-                        Mit Google anmelden
-                    </button>
+                    <div id="google-login" class="game__auth-button">
+                        <span class="game__auth-button-text">Mit Google anmelden</span>
+                    </div>
                     <p class="game__auth-hint">Vor Spielstart bitte anmelden, damit der Fortschritt deinem Konto zugeordnet wird.</p>
                     <p id="auth-error" class="game__auth-error" hidden></p>
                 </div>
